--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Moranguinho</title>
+  <title>Moranguinho do bruno</title>
   
 </head>
 <body>
