--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
 <body>
 
   <header>
-    <h1>Moranguinho</h1>
+    <h1>Moranguinho E SEUS AMIGOS</h1>
   </header>
 
   <main>
-    <p>Moranguinho é uma personagem muito querida, criada para o público infantil, conhecida por sua alegria e bondade. 
-    Ela vive em um mundo colorido e mágico chamado Morangolândia, cheio de frutas, flores e aventuras.</p>
+    <p>Moranguinho (Strawberry Shortcake) é uma personagem fofa criada nos anos 80, conhecida por seu visual com cabelo ruivo e roupas com estampas de morango. Ela vive em um mundo encantado, onde compartilha aventuras com seus amigos, que são inspirados em frutas, como Cerejinha, Laranja, Limão, Blueberry, Uva e Ameixa. Cada amiga tem sua própria personalidade, mas todas têm em comum a amizade, a gentileza e o desejo de ajudar os outros.
+
+      Moranguinho e seus amigos vivem na Morangolândia, um lugar mágico onde resolvem problemas e enfrentam desafios, geralmente causados por Azeda, a vilã da história. As lições principais da série são sobre amizade verdadeira, generosidade, trabalho em equipe e respeito às diferenças.
+
+      A franquia de Moranguinho se manteve popular por gerações, com novos episódios e brinquedos, sempre com a mensagem de amor, amizade e diversão.</p>
 
     <h2>Amigos da Moranguinho</h2>
     <ul>
-      <li>Limãozinha: amiga divertida e cheia de energia.</li>
-      <li>Uvinha: carinhosa e sempre ajuda os amigos.</li>
-      <li>Framboesa: criativa e adora inventar coisas novas.</li>
-      <li>Laranjinha: corajosa e protetora do grupo.</li>
+      <li>Limãozinha: Limão tem uma personalidade um pouco mais atrevida e está sempre com uma risada contagiante. Ela é cheia de energia, sempre pronta para embarcar em uma nova aventura, e adora criar sobremesas deliciosas. Sua aparência é baseada em limões e ela tem cabelo amarelo e roupas em tons de amarelo.</li>
+      <li>Uvinha: Uvinha é uma amiga descontraída e super descolada. Ela adora estar na companhia de seus amigos e se divertir. Sua aparência é inspirada nas uvas, com roupas roxas e um cabelo igualmente roxo. Ela é extrovertida e sempre consegue fazer seus amigos sorrirem.</li>
+      <li>Laranjinha: </li>
       <li>Cerejinha: doce e muito engraçada.</li>
     </ul>
 
@@ -50,7 +52,7 @@
     }
 
     header {
-      background-color: #ff99c8;
+      background-color: #831147;
       color: white;
       padding: 15px;
     }
@@ -64,7 +66,7 @@
     }
 
     h2 {
-      color: #d63384;
+      color: #ae678a;
     }
 
     ul {
@@ -77,7 +79,7 @@
     }
 
     a {
-      color: #ff4da6;
+      color: #f3b5d4;
       text-decoration: none;
     }
 
@@ -86,7 +88,7 @@
     }
 
     footer {
-      background-color: #ff99c8;
+      background-color: #751a44;
       color: white;
       padding: 10px;
       margin-top: 20px;
