--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <ul>
       <li>Limãozinha: Limão tem uma personalidade um pouco mais atrevida e está sempre com uma risada contagiante. Ela é cheia de energia, sempre pronta para embarcar em uma nova aventura, e adora criar sobremesas deliciosas. Sua aparência é baseada em limões e ela tem cabelo amarelo e roupas em tons de amarelo.</li>
       <li>Uvinha: Uvinha é uma amiga descontraída e super descolada. Ela adora estar na companhia de seus amigos e se divertir. Sua aparência é inspirada nas uvas, com roupas roxas e um cabelo igualmente roxo. Ela é extrovertida e sempre consegue fazer seus amigos sorrirem.</li>
-      <li>Laranjinha: </li>
-      <li>Cerejinha: doce e muito engraçada.</li>
+      <li>Laranjinha: Laranja é uma amiga doce e tranquila. Ela é muito sábia e sempre pronta para ajudar, especialmente quando alguém está precisando de conselhos. Seu cabelo é laranja e seu estilo é leve e alegre, refletindo sua personalidade amigável e calma </li>
+      <li>Cerejinha:Cerejinha é uma amiga de Moranguinho e tem uma personalidade extrovertida e criativa. Ela adora cantar e é muito talentosa. Sua aparência é inspirada em cerejas, com cabelo roxo e roupas vermelhas. Ela tem um temperamento alegre e gosta de encantar os outros com sua música e energia. </li>
     </ul>
 
     <h2>Curiosidades sobre Moranguinho</h2>
