--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <style>
     body {
-      background-color: #ffe6f0;
+      background-color: #b84b76;
       font-family: Verdana;
       margin: 0;
       padding: 0;
@@ -52,7 +52,7 @@
     }
 
     header {
-      background-color: #831147;
+      background-color: #dd2b7e;
       color: white;
       padding: 15px;
     }
@@ -66,7 +66,7 @@
     }
 
     h2 {
-      color: #ae678a;
+      color: #cf5391;
     }
 
     ul {
@@ -79,7 +79,7 @@
     }
 
     a {
-      color: #f3b5d4;
+      color: #f299c5;
       text-decoration: none;
     }
 
@@ -88,7 +88,7 @@
     }
 
     footer {
-      background-color: #751a44;
+      background-color: #e988b5;
       color: white;
       padding: 10px;
       margin-top: 20px;
