--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <header>
-    <h1>Moranguinho E SEUS AMIGOS</h1>
+    <h1>Moranguinho do Bruno</h1>
   </header>
 
   <main>
@@ -44,7 +44,7 @@
 
   <style>
     body {
-      background-color: #b84b76;
+      background-color: #cd82a0;
       font-family: Verdana;
       margin: 0;
       padding: 0;
@@ -52,7 +52,7 @@
     }
 
     header {
-      background-color: #dd2b7e;
+      background-color: #8f8388;
       color: white;
       padding: 15px;
     }
@@ -66,7 +66,7 @@
     }
 
     h2 {
-      color: #cf5391;
+      color: #12020a;
     }
 
     ul {
@@ -79,7 +79,7 @@
     }
 
     a {
-      color: #f299c5;
+      color: #f0077c;
       text-decoration: none;
     }
 
@@ -88,7 +88,7 @@
     }
 
     footer {
-      background-color: #e988b5;
+      background-color: #4d293a;
       color: white;
       padding: 10px;
       margin-top: 20px;
