--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <style>
     body {
-      background-color: #cd82a0;
+      background-color: #e73bc5;
       font-family: Verdana;
       margin: 0;
       padding: 0;
@@ -52,7 +52,7 @@
     }
 
     header {
-      background-color: #8f8388;
+      background-color: #c864c5;
       color: white;
       padding: 15px;
     }
@@ -79,7 +79,7 @@
     }
 
     a {
-      color: #f0077c;
+      color: #e75aa1;
       text-decoration: none;
     }
 
@@ -88,7 +88,7 @@
     }
 
     footer {
-      background-color: #4d293a;
+      background-color: #b45aa5;
       color: white;
       padding: 10px;
       margin-top: 20px;
