--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     }
 
     h2 {
-      color: #12020a;
+      color: #fcfbfb;
     }
 
     ul {
@@ -79,7 +79,7 @@
     }
 
     a {
-      color: #e75aa1;
+      color: #e08cb6;
       text-decoration: none;
     }
 
@@ -88,7 +88,7 @@
     }
 
     footer {
-      background-color: #b45aa5;
+      background-color: #d35391;
       color: white;
       padding: 10px;
       margin-top: 20px;
