--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <style>
     body {
-      background-color: #e73bc5;
+      background-color:#ffe6f0;
       font-family: Verdana;
       margin: 0;
       padding: 0;
@@ -52,7 +52,7 @@
     }
 
     header {
-      background-color: #c864c5;
+      background-color:#ff99c8;
       color: white;
       padding: 15px;
     }
@@ -66,8 +66,7 @@
     }
 
     h2 {
-      color: #fcfbfb;
-    }
+      color: #d63384;
 
     ul {
       list-style-type: none;
@@ -79,7 +78,7 @@
     }
 
     a {
-      color: #e08cb6;
+      color: #ff4da6;
       text-decoration: none;
     }
 
@@ -88,7 +87,7 @@
     }
 
     footer {
-      background-color: #d35391;
+      background-color:  #ff99c8;
       color: white;
       padding: 10px;
       margin-top: 20px;
