--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <h2>Curiosidades sobre Moranguinho</h2>
     <p>Moranguinho foi criada nos anos 80 e ganhou diversos produtos, desenhos e filmes. Ela é conhecida por:</p>
     <ul>
-      <li>Vestir roupas com cores alegres e frutas estampadas.</li>
-      <li>Ter uma casa charmosa no topo de uma colina cheia de morangos.</li>
-      <li>Gostar de cozinhar e fazer doces para seus amigos.</li>
-      <li>Ensinar valores como amizade, generosidade e cuidado com a natureza.</li>
+      <p>Vestir roupas com cores alegres e frutas estampadas.</p>
+      <p>Ter uma casa charmosa no topo de uma colina cheia de morangos.</p>
+      <p>Gostar de cozinhar e fazer doces para seus amigos.</p>
+      <p>Ensinar valores como amizade, generosidade e cuidado com a natureza.</p>
     </ul>
 
     <h2>Aventuras da Moranguinho</h2>
