--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     </ul>
 
     <h2>Aventuras da Moranguinho</h2>
-    <p>Em suas histórias, Moranguinho vive diversas aventuras divertidas e educativas. Ela enfrenta desafios, descobre novos lugares e aprende lições importantes junto com seus amigos. Cada história incentiva a imaginação e transmite mensagens positivas para crianças.</p>
+    <p>Nas aventuras de Moranguinho e seus amigos, eles enfrentam desafios variados em Morangolândia, um mundo mágico repleto de frutas encantadas e personagens cativantes. Juntos, enfrentam a vilã Azeda, que tenta estragar a paz e a doçura do lugar, e lidam com situações como colheitas difíceis, eventos especiais e problemas ambientais. Ao longo dessas aventuras, Moranguinho e sua turma aprendem e ensinam lições valiosas sobre amizade, trabalho em equipe, generosidade e respeito pelas diferenças. Sempre unidos, eles mostram que, com criatividade e colaboração, é possível superar qualquer obstáculo e transformar cada desafio em uma oportunidade de crescer e fazer o bem.
+</p>
 
     <h2>Saiba mais</h2>
     <p><a href="https://www.moranguinho.com.br/" target="_blank">Clique aqui para saber mais sobre Moranguinho</a></p>
